@@ -128,6 +128,7 @@ OpheliaBrute.prototype.DropTable = function() {
 //TODO
 OpheliaBrute.prototype.Act = function(encounter, activeChar) {
 	// Pick a random target
+	var targets = this.GetPartyTarget(encounter, activeChar);
 	var t = this.GetSingleTarget(encounter, activeChar);
 
 	var parseVars = {
@@ -144,7 +145,7 @@ OpheliaBrute.prototype.Act = function(encounter, activeChar) {
 	else if(choice < 0.6 && Abilities.Physical.CrushingStrike.enabledCondition(encounter, this))
 		Abilities.Physical.CrushingStrike.Use(encounter, this, t);
 	else if(choice < 0.8 && Abilities.Physical.GrandSlam.enabledCondition(encounter, this))
-		Abilities.Physical.GrandSlam.Use(encounter, this, t);
+		Abilities.Physical.GrandSlam.Use(encounter, this, targets);
 	else
 		Abilities.Attack.Use(encounter, this, t);
 }
