@@ -14,6 +14,7 @@ Version 0.3t
 * The ability to add comments to saves has been added (thanks kspriv!)
 * Inventory management just got a hell of a lot cleaner (applies to shops, inventory and combat inventory). Thanks kspriv!
 * Terry has gotten a few new jobs to access, as intended.
+* Reintroduced the combat Cheat button in Debug mode.
 
 --------------------------------------------
              PREVIOUS VERSIONS
